default/objects/Lead/fields/CCS_Competition__c.field-meta.xml
<CustomField>
    <fullName>CCS_Competition__c</fullName>
    <label>Competition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Competitor_Country__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aral</fullName>
            </value>
            <value>
                <fullName>Avia</fullName>
            </value>
            <value>
                <fullName>Axigon</fullName>
            </value>
            <value>
                <fullName>Bank Card</fullName>
            </value>
            <value>
                <fullName>Baywa</fullName>
            </value>
            <value>
                <fullName>Belgian Fuel Card (BFC)</fullName>
            </value>
            <value>
                <fullName>Benzina</fullName>
            </value>
            <value>
                <fullName>BP</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Circle K</fullName>
            </value>
            <value>
                <fullName>Coop Pronto</fullName>
            </value>
            <value>
                <fullName>Dats24</fullName>
            </value>
            <value>
                <fullName>DCB</fullName>
            </value>
            <value>
                <fullName>DFC</fullName>
            </value>
            <value>
                <fullName>DKV</fullName>
            </value>
            <value>
                <fullName>Do not want to share</fullName>
            </value>
            <value>
                <fullName>E.L’eclerc</fullName>
            </value>
            <value>
                <fullName>Easyfuel Card</fullName>
            </value>
            <value>
                <fullName>Eni (Agip)</fullName>
            </value>
            <value>
                <fullName>Esso</fullName>
            </value>
            <value>
                <fullName>EuroOil</fullName>
            </value>
            <value>
                <fullName>Eurowag</fullName>
            </value>
            <value>
                <fullName>Expensa (Direct Fidoo)</fullName>
            </value>
            <value>
                <fullName>Fleetcard (DCS)</fullName>
            </value>
            <value>
                <fullName>Fleetpass+</fullName>
            </value>
            <value>
                <fullName>Gabriels</fullName>
            </value>
            <value>
                <fullName>Go Tankkaart</fullName>
            </value>
            <value>
                <fullName>LukOil</fullName>
            </value>
            <value>
                <fullName>Maes</fullName>
            </value>
            <value>
                <fullName>Migrol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>