default/objects/Lead/fields/CCS_Contact_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>CCS_Contact_Record_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCS Contact Record Type</label>
    <type>Text</type>
</CustomField>