default/objects/Lead/fields/CCS_Cribis_Copy__c.field-meta.xml
<CustomField>
    <fullName>CCS_Cribis_Copy__c</fullName>
    <formula>TEXT(CCS_Cribis__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCS_Cribis_Copy</label>
    <type>Text</type>
</CustomField>