default/objects/Lead/fields/CCS_Date_of_next_call__c.field-meta.xml
<CustomField>
    <fullName>CCS_Date_of_next_call__c</fullName>
    <label>CCS Date of next call</label>
    <type>Date</type>
</CustomField>