default/objects/Lead/fields/CCS_DCG_score__c.field-meta.xml
<CustomField>
    <fullName>CCS_DCG_score__c</fullName>
    <label>CCS DCG score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>