default/objects/Lead/fields/CCS_Description__c.field-meta.xml
<CustomField>
    <fullName>CCS_Description__c</fullName>
    <label>CCS Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>