default/objects/Lead/fields/CCS_Email_2__c.field-meta.xml
<CustomField>
    <fullName>CCS_Email_2__c</fullName>
    <description>Serves as a copy field of Email, so we can transfer email information to Account records.</description>
    <label>CCS Email 2</label>
    <type>Email</type>
</CustomField>