default/objects/Lead/fields/CCS_Entry_date__c.field-meta.xml
<CustomField>
    <fullName>CCS_Entry_date__c</fullName>
    <label>CCS Entry date</label>
    <type>Date</type>
</CustomField>