default/objects/Lead/fields/CCS_First_Contact_Inbound_Outbound__c.field-meta.xml
<CustomField>
    <fullName>CCS_First_Contact_Inbound_Outbound__c</fullName>
    <label>CCS_First Contact: Inbound/Outbound</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
            <value>
                <fullName>Inbound Mail</fullName>
            </value>
            <value>
                <fullName>Inbound Website</fullName>
            </value>
            <value>
                <fullName>Outbound e-mail</fullName>
            </value>
            <value>
                <fullName>Incoming SMS</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>