default/objects/Lead/fields/CCS_Interest__c.field-meta.xml
<CustomField>
    <fullName>CCS_Interest__c</fullName>
    <label>CCS Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ano</fullName>
            </value>
            <value>
                <fullName>ne</fullName>
            </value>
            <value>
                <fullName>nabídka e-mailem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>