default/objects/Lead/fields/CCS_Interest_YES__c.field-meta.xml
<CustomField>
    <fullName>CCS_Interest_YES__c</fullName>
    <label>CCS Interest YES</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCS_Interest__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>objednávka Limit+</fullName>
            </value>
            <value>
                <fullName>objednávka Limit+ MINI</fullName>
            </value>
            <value>
                <fullName>objednávka Moje síť</fullName>
            </value>
            <value>
                <fullName>objednávka FIX 97</fullName>
            </value>
            <value>
                <fullName>objednávka Eso 2015</fullName>
            </value>
            <value>
                <fullName>schůzka OZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>