default/objects/Lead/fields/CCS_Jm_na__c.field-meta.xml
<CustomField>
    <fullName>CCS_Jm_na__c</fullName>
    <label>CCS Jména</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bronislava Štajerová</fullName>
                <label>Bronislava Nováková</label>
            </value>
            <value>
                <fullName>Iveta Baštářová</fullName>
            </value>
            <value>
                <fullName>Věra Staňková</fullName>
            </value>
            <value>
                <fullName>Vladimíra Ouřadová</fullName>
            </value>
            <value>
                <fullName>Radka Zahajská</fullName>
            </value>
            <value>
                <fullName>Hanka Bartoňová</fullName>
            </value>
            <value>
                <fullName>Veronika Filipová</fullName>
            </value>
            <value>
                <fullName>Martina Kabíčková</fullName>
            </value>
            <value>
                <fullName>Olga Maníková</fullName>
            </value>
            <value>
                <fullName>Pavel Porubiak</fullName>
            </value>
            <value>
                <fullName>Filip Směšný</fullName>
            </value>
            <value>
                <fullName>Helena Jandová</fullName>
            </value>
            <value>
                <fullName>Tereza Raušová</fullName>
            </value>
            <value>
                <fullName>Miroslava Lohniská</fullName>
            </value>
            <value>
                <fullName>Matěj Peltán</fullName>
            </value>
            <value>
                <fullName>Miroslav Děd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>