default/objects/Lead/fields/CCS_kraj__c.field-meta.xml
<CustomField>
    <fullName>CCS_kraj__c</fullName>
    <label>CCS Kraj</label>
    <type>TextArea</type>
</CustomField>