default/objects/Lead/fields/CCS_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>CCS_Lead_Source__c</fullName>
    <description>Copy of Lead Source so we can transfer Lead Source to Account Source.</description>
    <label>CCS Lead Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>