default/objects/Lead/fields/CCS_Names_2__c.field-meta.xml
<CustomField>
    <fullName>CCS_Names_2__c</fullName>
    <label>CCS Names 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pavel Porubiak</fullName>
            </value>
            <value>
                <fullName>Olga Maníková</fullName>
            </value>
            <value>
                <fullName>Martina Kabíčková</fullName>
            </value>
            <value>
                <fullName>Veronika Filipová</fullName>
            </value>
            <value>
                <fullName>Filip Směšný</fullName>
            </value>
            <value>
                <fullName>Tereza Raušová</fullName>
            </value>
            <value>
                <fullName>Helena Jandová</fullName>
            </value>
            <value>
                <fullName>Matěj Peltán</fullName>
            </value>
            <value>
                <fullName>Miroslava Lohniská</fullName>
            </value>
            <value>
                <fullName>Jana Jandáčková</fullName>
            </value>
            <value>
                <fullName>Miroslav Děd</fullName>
            </value>
            <value>
                <fullName>Jozef Muhar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>