default/objects/Lead/fields/CCS_Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>CCS_Next_Step_Date__c</fullName>
    <label>CCS_Next Step Date</label>
    <type>Date</type>
</CustomField>