default/objects/Lead/fields/CCS_number_of_cards__c.field-meta.xml
<CustomField>
    <fullName>CCS_number_of_cards__c</fullName>
    <label>CCS_number_of_cards</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>