default/objects/Lead/fields/CCS_Number_of_GPS_units__c.field-meta.xml
<CustomField>
    <fullName>CCS_Number_of_GPS_units__c</fullName>
    <label>CCS_Number of GPS units</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>