default/objects/Lead/fields/CCS_Okres__c.field-meta.xml
<CustomField>
    <fullName>CCS_Okres__c</fullName>
    <label>CCS Okres</label>
    <type>TextArea</type>
</CustomField>