default/objects/Lead/fields/CCS_OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>CCS_OpportunityId__c</fullName>
    <label>CCS_OpportunityId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>