default/objects/Lead/fields/CCS_other_heavy_machinery_over_3_5t__c.field-meta.xml
<CustomField>
    <fullName>CCS_other_heavy_machinery_over_3_5t__c</fullName>
    <label>CCS other heavy machinery over 3,5t</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>