default/objects/Lead/fields/CCS_Other_Reason_Disqualified__c.field-meta.xml
<CustomField>
    <fullName>CCS_Other_Reason_Disqualified__c</fullName>
    <label>CCS Other Reason Disqualified</label>
    <length>80</length>
    <type>Text</type>
</CustomField>