default/objects/Lead/fields/CCS_OZ_number__c.field-meta.xml
<CustomField>
    <fullName>CCS_OZ_number__c</fullName>
    <label>CCS_OZ_number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>