default/objects/Lead/fields/CCS_Popis_Leadu__c.field-meta.xml
<CustomField>
    <fullName>CCS_Popis_Leadu__c</fullName>
    <label>Popis Leadu</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>