default/objects/Lead/fields/CCS_Primary_Fueling_Method__c.field-meta.xml
<CustomField>
    <fullName>CCS_Primary_Fueling_Method__c</fullName>
    <label>CCS Primary Fueling Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankovní karta</fullName>
            </value>
            <value>
                <fullName>Hotovost</fullName>
            </value>
            <value>
                <fullName>Karta CCS</fullName>
            </value>
            <value>
                <fullName>Lokální kredit</fullName>
            </value>
            <value>
                <fullName>Karta řetězce ČS</fullName>
                <label>Karta řetězce čerpacích stanic</label>
            </value>
            <value>
                <fullName>Vlastní bencalor</fullName>
                <label>Dohoda s konkrétní čerpací stanicí</label>
            </value>
            <value>
                <fullName>Jiný</fullName>
            </value>
            <value>
                <fullName>Bankovní karta&amp;Hotovost</fullName>
                <label>Kombinace bankovní karta &amp; hotovost</label>
            </value>
            <value>
                <fullName>neznámo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>