default/objects/Lead/fields/CCS_priobjednavka__c.field-meta.xml
<CustomField>
    <fullName>CCS_priobjednavka__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Přiobjednávka?</label>
    <type>Checkbox</type>
</CustomField>