default/objects/Lead/fields/CCS_Promo_offer__c.field-meta.xml
<CustomField>
    <fullName>CCS_Promo_offer__c</fullName>
    <label>CCS Promo offer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Karty - CCS Limit Fix 97</fullName>
            </value>
            <value>
                <fullName>Karty - CCS Limit Easy</fullName>
            </value>
            <value>
                <fullName>Karty - CCS Limit Moje síť</fullName>
            </value>
            <value>
                <fullName>CCS Carnet 1+1</fullName>
            </value>
            <value>
                <fullName>CCS Carnet 149/7,99 EUR</fullName>
            </value>
            <value>
                <fullName>CCS Carnet 2+1</fullName>
            </value>
            <value>
                <fullName>CCS Carnet 2990</fullName>
            </value>
            <value>
                <fullName>CCS ČSOBL Agro</fullName>
            </value>
            <value>
                <fullName>Karty - CCS Limit Eso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>