default/objects/Lead/fields/CCS_Reason_of_lack_of_interest__c.field-meta.xml
<CustomField>
    <fullName>CCS_Reason_of_lack_of_interest__c</fullName>
    <label>CCS Reason of lack of interest</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCS_Interest__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Konkurence</fullName>
            </value>
            <value>
                <fullName>Má asistenci, pojištění a další benefity jinde</fullName>
            </value>
            <value>
                <fullName>Nízký limit</fullName>
            </value>
            <value>
                <fullName>Nelíbí se mu poplatek</fullName>
            </value>
            <value>
                <fullName>Nepotřebuje, nevyužije</fullName>
            </value>
            <value>
                <fullName>Nemají vozový park</fullName>
            </value>
            <value>
                <fullName>Je klient CCS</fullName>
            </value>
            <value>
                <fullName>Špatná zkušenost s CCS</fullName>
            </value>
            <value>
                <fullName>Nechce sdělit důvod</fullName>
            </value>
            <value>
                <fullName>Ukončená činnost</fullName>
            </value>
            <value>
                <fullName>Platba paušálem</fullName>
            </value>
            <value>
                <fullName>Jiný důvod (v poznámce)</fullName>
            </value>
            <value>
                <fullName>Odeslán email – ozve se sám</fullName>
            </value>
            <value>
                <fullName>Čerpání v zahraničí</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>