default/objects/Lead/fields/CCS_Telesales_Operator__c.field-meta.xml
<CustomField>
    <fullName>CCS_Telesales_Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Telesales Operator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lead_User</relationshipName>
    <type>Lookup</type>
</CustomField>