default/objects/Lead/fields/CCS_Updated__c.field-meta.xml
<CustomField>
    <fullName>CCS_Updated__c</fullName>
    <label>CCS Updated</label>
    <type>Date</type>
</CustomField>