default/objects/Lead/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Первый контакт по inbound</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sec_Channel__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Anruf</fullName>
            </value>
            <value>
                <fullName>FLMT_Form</fullName>
            </value>
            <value>
                <fullName>web</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>