default/objects/Lead/fields/Chatter__c.field-meta.xml
<CustomField>
    <fullName>Chatter__c</fullName>
    <description>Переписка с пользователями из онлайн чата</description>
    <label>Chatter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>