default/objects/Lead/fields/cislo_popisne__c.field-meta.xml
<CustomField>
    <fullName>cislo_popisne__c</fullName>
    <description>Číslo popisné.</description>
    <inlineHelpText>Číslo popisné.</inlineHelpText>
    <label>Číslo popisné</label>
    <length>10</length>
    <type>Text</type>
</CustomField>