default/objects/Lead/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <description>track_customer</description>
    <label>city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>