default/objects/Lead/fields/clicktocallLead__c.field-meta.xml
<CustomField>
    <fullName>clicktocallLead__c</fullName>
    <description>this field should be deleted when there is an integration with telephony system for Russia
*removes '#' and numbers after</description>
    <inlineHelpText>edit via the button Edit_Personal_Data</inlineHelpText>
    <formula>HYPERLINK("sip:"&amp; IF(CONTAINS(Phone,'#'), LEFT(Phone, FIND('#',Phone,0)-1), Phone)
		, Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>click-to-call</label>
    <type>Text</type>
</CustomField>