default/objects/Lead/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>