default/objects/Lead/fields/Close_date_return__c.field-meta.xml
<CustomField>
    <fullName>Close_date_return__c</fullName>
    <formula>Return_funnel_Opp__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close date (return to funnel)</label>
    <type>Date</type>
</CustomField>