default/objects/Lead/fields/Closed_owner_name_Lead__c.field-meta.xml
<CustomField>
    <fullName>Closed_owner_name_Lead__c</fullName>
    <description>Для маркировки воронки сэйлза переведенного в другую группу продаж</description>
    <label>Closed owner name_Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>