default/objects/Lead/fields/Closed_Task__c.field-meta.xml
<CustomField>
    <fullName>Closed_Task__c</fullName>
    <formula>NOT(IF( ISBLANK(LastActivityDate), true, false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed_Task</label>
    <type>Checkbox</type>
</CustomField>