default/objects/Lead/fields/Cold_Lead__c.field-meta.xml
<CustomField>
    <fullName>Cold_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is it a cold retailer lead or not</description>
    <label>Cold Lead</label>
    <type>Checkbox</type>
</CustomField>