default/objects/Lead/fields/Comment_on_Partner_card__c.field-meta.xml
<CustomField>
    <fullName>Comment_on_Partner_card__c</fullName>
    <label>Comment on Partner card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>