default/objects/Lead/fields/Company_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Legal_Name__c</fullName>
    <description>Company Legal Name</description>
    <inlineHelpText>Company Legal Name</inlineHelpText>
    <label>Company Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>