default/objects/Lead/fields/Competitor_Country__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Country__c</fullName>
    <description>List of Countries for filtering values in depended Lost_To_Competitor__c field</description>
    <label>Competitor's Country</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Quali_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>