default/objects/Lead/fields/Consent_Form_Datatransfer__c.field-meta.xml
<CustomField>
    <fullName>Consent_Form_Datatransfer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field for Consent Form Datatransfer if Customer agree with our Conditions</inlineHelpText>
    <label>Consent Form Datatransfer</label>
    <type>Checkbox</type>
</CustomField>