default/objects/Lead/fields/Contact_Check_JITB__c.field-meta.xml
<CustomField>
    <fullName>Contact_Check_JITB__c</fullName>
    <formula>IF((Number_of_days__c &gt; 1 &amp;&amp; Number_of_days__c &lt;= 7),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Check JITB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>