default/objects/Lead/fields/Contact_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Body__c</fullName>
    <label>Contact Email Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>