default/objects/Lead/fields/Conversion_Button__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Button__c</fullName>
    <description>TESTING DYNAMIC BUTTON</description>
    <formula>IF(
OR(
RecordTypeId = "0120O000000MiTu",
AND(
RecordTypeId = "012200000006oVT",
Country = 'Poland')),
"LeadConversionCarnet2",
"LeadConversion")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TESTING DYNAMIC BUTTON</inlineHelpText>
    <label>Conversion Button</label>
    <type>Text</type>
</CustomField>