default/objects/Lead/fields/Converted_From_Lead_Default__c.field-meta.xml
<CustomField>
    <fullName>Converted_From_Lead_Default__c</fullName>
    <description>Defines if Contact was converted from lead</description>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted From Lead (Default)</label>
    <type>Checkbox</type>
</CustomField>