default/objects/Lead/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Celkem Leadů</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>