default/objects/Lead/fields/Count_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Sessions__c</fullName>
    <label>Count of Sessions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>