default/objects/Lead/fields/Credit_Days_ppr__c.field-meta.xml
<CustomField>
    <fullName>Credit_Days_ppr__c</fullName>
    <label>Credit Days ppr</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Credit_Desicion_ppr__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Предоплата</fullName>
            </value>
            <value>
                <fullName>к7д</fullName>
            </value>
            <value>
                <fullName>к14д</fullName>
            </value>
            <value>
                <fullName>к30д</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>