default/objects/Lead/fields/Credit_Desicion_ppr__c.field-meta.xml
<CustomField>
    <fullName>Credit_Desicion_ppr__c</fullName>
    <label>Credit Decision ppr</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ДА</fullName>
            </value>
            <value>
                <fullName>НЕТ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>