default/objects/Lead/fields/Current_services__c.field-meta.xml
<CustomField>
    <fullName>Current_services__c</fullName>
    <inlineHelpText>Services that the Customer has with his current provider</inlineHelpText>
    <label>Current services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toll</fullName>
            </value>
            <value>
                <fullName>VAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>