default/objects/Lead/fields/Customer_interest__c.field-meta.xml
<CustomField>
    <fullName>Customer_interest__c</fullName>
    <label>Customer interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Оранжевый</fullName>
                <color>#FF6600</color>
                <label>Оранжевый</label>
            </value>
            <value>
                <fullName>Зеленый</fullName>
                <color>#009900</color>
                <label>Зеленый</label>
            </value>
            <value>
                <fullName>Синий</fullName>
                <color>#0B24BE</color>
                <label>Синий</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>